// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`version should update by increment and preid 1`] = `
Object {
  ".editorconfig": "# EditorConfig is awesome: http://EditorConfig.org{LF}# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# top-most EditorConfig file{LF}root = true{LF}{LF}# Properties for VBA, VB6 ...",
  ".gitattributes": "# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# Don't perform any line ending conversions by default{LF}{LF}# VBA extensions - Prevent LF normalization (bas, cls, frm, vba, docc...",
  ".gitignore": "# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# Hidden metadata files created by macOS (Desktop Services Store){LF}.DS_Store{LF}{LF}# Office temporary files{LF}~$*{LF}{LF}# Acce...",
  "vbaproject.toml":
  "[package]
name = \\"blank-package\\"
version = \\"0.1.0-beta.0\\"
authors = []
license = \\"UNLICENSED\\"

[source]
subfolders = { Objects = \\"Excel Objects\\", Forms = \\"Forms\\", Modules = \\"Modules\\", Classes = \\"Class Modules\\" }

[source.files]
Objects = \\"src/Excel Objects/**/*.cls\\"
Forms = \\"src/Forms/**/*.frm\\"
Modules = \\"src/Modules/**/*.bas\\"
Classes = \\"src/Class Modules/**/*.cls\\"
",
}
`;

exports[`version should update to explicit version 1`] = `
Object {
  ".editorconfig": "# EditorConfig is awesome: http://EditorConfig.org{LF}# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# top-most EditorConfig file{LF}root = true{LF}{LF}# Properties for VBA, VB6 ...",
  ".gitattributes": "# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# Don't perform any line ending conversions by default{LF}{LF}# VBA extensions - Prevent LF normalization (bas, cls, frm, vba, docc...",
  ".gitignore": "# Template from: https://github.com/DecimalTurn/VBA-on-GitHub{LF}{LF}# Hidden metadata files created by macOS (Desktop Services Store){LF}.DS_Store{LF}{LF}# Office temporary files{LF}~$*{LF}{LF}# Acce...",
  "vbaproject.toml":
  "[package]
name = \\"blank-package\\"
version = \\"2.0.0\\"
authors = []
license = \\"UNLICENSED\\"

[source]
subfolders = { Objects = \\"Excel Objects\\", Forms = \\"Forms\\", Modules = \\"Modules\\", Classes = \\"Class Modules\\" }

[source.files]
Objects = \\"src/Excel Objects/**/*.cls\\"
Forms = \\"src/Forms/**/*.frm\\"
Modules = \\"src/Modules/**/*.bas\\"
Classes = \\"src/Class Modules/**/*.cls\\"
",
}
`;
